# invenio-alma

./: .editorconfig  .gitignore  .ruff.toml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_alma/: __init__.py  api.py  cli.py  click_param_type.py  config.py  decorators.py  ext.py  proxies.py  tasks.py  types.py  utils.py  version.py  views.py
invenio_alma/resources/: __init__.py  config.py  resources.py
invenio_alma/services/: __init__.py  alma.py  base.py  config.py  errors.py  repository.py  rest.py  sru.py  utils.py
invenio_alma/services/config/: __init__.py  config.py
tests/: conftest.py  test_invenio_alma.py  test_invenio_alma_service.py
