# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2022 Graz University of Technology.
#
# invenio-alma is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.


[metadata]
name = invenio-alma
version = attr: invenio_alma.__version__
description = "Provides API for Alma."
long_description = file: README.rst, CHANGES.rst
license = MIT
author = Graz University of Technology.
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/tu-graz-library/invenio-alma
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    click>=7.0.0
    click-option-group>=0.5.3
    invenio-records-marc21[elasticsearch7]>=0.4.0
    requests>=2.0.0
    # TODO: Prevent build fail remove after it is fixed in base module
    jinja2<3.1
    click<=8.0.4
    Flask<2.1.0
    Werkzeug<=2.0.3

[options.extras_require]
tests =
    wheel
    invenio-cache>=1.1.0
    pytest-invenio>=1.4.3
    pytest-flake8>=1.0.0
    pytest-black>=0.3.0,<0.3.10
    pytest-isort>=3.0.0
    pytest-pylint>=0.18.0
    pytest-bandit>=0.6.1
    pytest-pydocstyle>=2.2.0
    Sphinx>=4.2.0

[options.entry_points]
flask.commands =
    alma = invenio_alma.cli:alma
console_scripts =
    alma = invenio_alma.cli:alma
invenio_base.apps =
    invenio_alma = invenio_alma:InvenioAlma

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py
ignore = E203,E501

[flake8]
max-line-length = 88
extend-ignore = E203
select = C,E,F,W,B,B950
ignore = E501

[pylint.messages_control]
disable = consider-using-with, fixme, too-many-arguments

[tool:isort]
profile = black

[tool:pytest]
addopts = --isort --flake8 --pylint --bandit --pydocstyle --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_alma --cov-report=term-missing
testpaths = tests invenio_alma
live_server_scope = module
