# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2024 Graz University of Technology.
#
# invenio-alma is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.


[metadata]
name = invenio-alma
version = attr: invenio_alma.__version__
description = "Provides API for Alma."
long_description = file: README.rst, CHANGES.rst
license = MIT
author = Graz University of Technology.
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/tu-graz-library/invenio-alma
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    click>=7.0.0
    click-option-group>=0.5.3
    flask-resources>=1.2.0
    invenio-access>=2.0.0
    invenio-accounts>=3.0.0
    requests>=2.0.0

[options.extras_require]
tests =
    invenio-app>=1.5.0
    invenio-cache>=1.1.0
    invenio-search[opensearch2]>=2.1.0
    pytest-invenio>=1.4.3
    pytest-black-ng>=0.4.0
    ruff>=0.0.263
    Sphinx>=4.2.0

[options.entry_points]
flask.commands =
    alma = invenio_alma.cli:alma
console_scripts =
    alma = invenio_alma.cli:alma
invenio_base.apps =
    invenio_alma = invenio_alma:InvenioAlma
invenio_base.api_apps =
    invenio_alma = invenio_alma:InvenioAlma
invenio_base.api_blueprints =
    invenio_alma_records = invenio_alma.views:create_record_bp
invenio_celery.tasks =
    invenio_alma = invenio_alma.tasks

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[tool:isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_alma --cov-report=term-missing
testpaths = tests invenio_alma
live_server_scope = module
